# magnetics-puzzle

tester/: hs_log.txt  polarity.cabal
tester/app/: Main.hs
tester/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
tester/dist-newstyle/packagedb/ghc-9.4.8/: package.cache  polarity-0.1.0.0-inplace-polarity-lib.conf
tester/lib/: Polarity.hs
tester/tests/: PolarityTest.hs
